tests/neg-custom-args/captures/mutability.check
-- Error: tests/neg-custom-args/captures/mutability.scala:4:24 ---------------------------------------------------------
4 |  def hide(x: T) = this.set(x) // error
  |                   ^^^^^^^^
  |                   cannot call update method set from (Ref.this : Ref[T]^),
  |                   since the access is in method hide, which is not an update method
  |
  |                   where:    ^ refers to a fresh root capability classified as Mutable in the type of class Ref
-- Error: tests/neg-custom-args/captures/mutability.scala:9:9 ----------------------------------------------------------
9 |    self.set(x)  // error
  |    ^^^^^^^^
  |    cannot call update method set from (self : Ref[T^{}]^{Ref.this.rd}),
  |    since its capture set {self} is read-only
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/mutability.scala:10:25 -----------------------------------
10 |    val self2: Ref[T]^ = this // error
   |                         ^^^^
   |           Found:    Ref[T]^{Ref.this.rd}
   |           Required: Ref[T]^
   |
   |           Note that capability Ref.this.rd is not included in capture set {}.
   |
   |           Note that {cap} is an exclusive capture set of the mutable type Ref[T]^,
   |           it cannot subsume a read-only capture set of the mutable type Ref[T]^{Ref.this.rd}.
   |
   |           where:    ^ and cap refer to a fresh root capability classified as Mutable in the type of value self2
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/mutability.scala:15:25 --------------------------------------------------------
15 |  def set(x: T) = this.x.set(x) // error
   |                  ^^^^^^^^^^
   |                  cannot call update method set from (Ref2.this.x : Ref[T^{}]^),
   |                  since the access is in method set, which is not an update method
   |
   |                  where:    ^ refers to a fresh root capability classified as Mutable in the type of value x
-- Error: tests/neg-custom-args/captures/mutability.scala:22:5 ---------------------------------------------------------
22 |  r1.set(33) // error
   |  ^^^^^^
   |  cannot call update method set from (r1 : Ref[Int]),
   |  since its capture set {r1} is read-only
-- Error: tests/neg-custom-args/captures/mutability.scala:27:7 ---------------------------------------------------------
27 |  r3.x.set(33) // error
   |  ^^^^^^^^
   |  cannot call update method set from (r3.x : Ref[Int]^),
   |  since the capture set {r3} of its prefix (r3 : Ref2[Int]) is read-only
   |
   |  where:    ^ refers to a fresh root capability classified as Mutable in the type of value x
